--- a/weatherProject/docker-compose.yml
+++ b/weatherProject/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - app-network
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   mysql_data:
