--- a/weatherProject/docker-compose.yml
+++ b/weatherProject/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - db
 
   node-backend:
-    build: .
+    build: ../backend
     container_name: node-backend
     ports:
       - "5000:5000"
@@ -18,6 +18,7 @@ services:
       - app-network
     depends_on:
       - db
+    command: /wait-for-it.sh mysql-db:3306 -t 60 -- npm start
 
   db:
     image: mysql:8
