--- a/weatherProject/docker-compose.yml
+++ b/weatherProject/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf
 
 volumes:
   mysql_data:
