--- a/weatherProject/docker-compose.yml
+++ b/weatherProject/docker-compose.yml
@@ -36,7 +36,10 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+    command: >
+      --character-set-server=utf8mb4
+      --collation-server=utf8mb4_unicode_ci
+      --init-connect='SET NAMES utf8mb4;'
 
 volumes:
   mysql_data:
